cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_427.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:1158: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:1158:13: Write of unused value
1156.   
1157.               v = sk_CONF_VALUE_value(dn_sk, i);
1158.               p = q = NULL;
                    ^
1159.               type = v->name;
1160.               if (!check_end(type, "_min") || !check_end(type, "_max") ||
